--- a/src/asv.css
+++ b/src/asv.css
@@ -1514,8 +1514,7 @@ img {
 
 .smoke-h1 {
     position: fixed;
-    bottom: 50%;
-    top: 50%;
+    margin-top: 240px;
     transform: translateY(-50%);
     width: 100%;
     text-align: center;
